Bug 482086 - Horizontally maximized window does not maximize correctly if moved
Summary: Horizontally maximized window does not maximize correctly if moved
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6, usability
Depends on:
Blocks:
 
Reported: 2024-02-29 20:09 UTC by fanzhuyifan
Modified: 2024-03-09 00:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fanzhuyifan 2024-02-29 20:09:25 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. open dolphin
2. double click left edge to maximize horizontally
3. drag by titlebar to screen top to maximize, while having some horizontal offset

OBSERVED RESULT
dolphin's size correctly maximizes, but its position has some horizontal offset

EXPECTED RESULT
dolphin correctly maximizes like usual.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.0.0
Qt Version: 6.7.0
Kernel Version: 6.7.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 20 × 13th Gen Intel® Core™ i9-13900H
Memory: 15.2 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: ROG Zephyrus G16 GU603VV_GU603VV
System Version: 1.0

ADDITIONAL INFORMATION
Also happens with these steps:

1. open dolphin
2. double click left edge to maximize horizontally
3. drag by titlebar left a bit
4. double click titlebar to maximize.
Comment 1 orkenwhite 2024-03-06 12:56:33 UTC
Seems to only affect native Wayland windows, I can't reproduce this when I'm running Dolphin (or any other application) under XWayland.
Comment 2 Bug Janitor Service 2024-03-07 14:51:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5379
Comment 3 Vlad Zahorodnii 2024-03-08 08:45:20 UTC
Git commit 40b8637ab87e254bcccab35c2a68d211515fe74f by Vlad Zahorodnii, on behalf of Patrik Fábián.
Committed on 08/03/2024 at 08:33.
Pushed by vladz into branch 'master'.

xdgshellwindow: Always update window position and size along all axes when fully miximizing window

M  +12   -13   src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/40b8637ab87e254bcccab35c2a68d211515fe74f
Comment 4 Vlad Zahorodnii 2024-03-08 09:23:22 UTC
Git commit ab8345a24cc4276099143942776ae5dacbcfda00 by Vlad Zahorodnii, on behalf of Patrik Fábián.
Committed on 08/03/2024 at 09:11.
Pushed by vladz into branch 'Plasma/6.0'.

xdgshellwindow: Always update window position and size along all axes when fully miximizing window


(cherry picked from commit 40b8637ab87e254bcccab35c2a68d211515fe74f)

M  +12   -13   src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/ab8345a24cc4276099143942776ae5dacbcfda00