xdgshellwindow: Always update window position and size along all axes when fully miximizing window

BUG: 482086